# there-are-stars

./: .gitignore  README.md  app.py  index.jinja  pyproject.toml
.github/workflows/: story.yml
data/: README.md  decorative-stones.json  flowers.json  natural-places.json  occupations.json  weather_conditions.json
